kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: testing 
  name: testing 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testing 
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: testing 
    spec:
      containers:
      - image: ikanpaus/simplepapptest:1.0.0 
        name: testing 
        ports:
        - containerPort: 5000 
        resources: {}
status: {}
