kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: testing
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 5000
  type: LoadBalancer
status:
  loadBalancer: {}
